# dudect-bencher

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  policy-gate.yml  security.yml  supply-chain.yml
examples/: ctbench-foo.rs
src/: ctbench.rs  lib.rs  macros.rs  stats.rs  toplevel.rs
