[package]
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
name = "dudect-bencher"
version = "0.5.0"
edition = "2021"

license = "MIT"

repository = "https://github.com/rozbb/dudect-bencher/"
documentation = "https://docs.rs/dudect-bencher/"

description = "An implementation of the DudeCT constant-time function tester"

keywords = ["constant", "constant-time", "crypto", "benchmark"]

[dependencies]
clap = "2"
ctrlc = "3"
rand = "0.8"
rand_chacha = "0.3"
